packages/build/tests/error/fixtures/fail_build/plugin.js
module.exports = {
  async onPreBuild({
    utils: {
      build: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
